# production-ai-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  testing.md
.github/workflows/: ci.yml
app/: Dockerfile  config.py  main.py  models.py
app/agents/: adaptive_router.py  document_grader.py  query_decomposer.py
app/agents/tools/: code_search.py  vector_search.py  web_search.py
app/components/: hybrid_retriever.py  reranker.py  vector_store.py
app/prompts/: registry.py  templates.py
app/security/: auth.py  content_filter.py  input_guard.py  output_filter.py  rate_limiter.py
app/services/: conversation.py  query_rewriter.py  query_router.py  rag_pipeline.py  semantic_cache.py
data/index_config/: README.md
docs/: api-reference.md  architecture.md  deployment.md  guide-agents.md  guide-base-de-donnees.md  guide-cicd.md  guide-construction.md  guide-evaluation.md  guide-frontend.md  guide-observabilite.md  guide-securite.md  guide-services.md  guide-tests.md
evaluation/: golden_dataset.json  offline_eval.py  online_monitor.py
frontend/: Dockerfile  app.py
frontend/static/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
observability/: cost_tracker.py  feedback.py  online_monitor.py  tracer.py
scripts/: healthcheck.py  migrate.py  seed.py
tests/: conftest.py  test_agents.py  test_api.py  test_cache.py  test_evaluation.py  test_observability.py  test_prompts.py  test_retrieval.py  test_routing.py  test_security.py
