[project]
name = "production-ai-app"
version = "0.1.0"
description = "9-layer AI production architecture with RAG pipeline, agents, security, evaluation, and observability"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=1.1.14",
    "langchain-community>=0.0.20",
    "langgraph>=1.0.10",
    "openai>=1.12.0",
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "prometheus-client>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    # Security: pin vulnerable transitive dependencies
    "certifi>=2024.7.4",
    "idna>=3.7",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "langgraph-checkpoint>=4.0.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.5.0",
    "onnxruntime>=1.17.0",
    "torch>=2.8.0",
    "transformers>=5.0.0",
    "pillow>=12.2.0",
]
dev = [
    "production-ai-app[ml]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "evaluation", "observability"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true
ignore_errors = true
